--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,7 +6,10 @@ applications:
   routes:
   - route: allocations-pal-gauri-naresh.cfapps.io
   path: Applications/AllocationsServer/bin/Release/netcoreapp2.1/publish
+  env:
+    GRANT_TYPE: client_credentials
   services:
   - tracker-service-registry
   - tracker-circuit-breaker-dashboard
   - tracker-amqp
+  - tracker-sso
