--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -6,9 +6,11 @@ applications:
   routes:
   - route: backlog-pal-gauri-naresh.cfapps.io
   path: Applications/BacklogServer/bin/Release/netcoreapp2.1/publish
-  
+  env:
+    GRANT_TYPE: client_credentials
   
   services:
   - tracker-service-registry
-   - tracker-circuit-breaker-dashboard
+  - tracker-circuit-breaker-dashboard
   - tracker-amqp
+  - tracker-sso
