--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -6,5 +6,8 @@ applications:
   routes:
   - route: registration-pal-gauri-naresh.cfapps.io
   path: Applications/RegistrationServer/bin/Release/netcoreapp2.1/publish
+  env:
+    GRANT_TYPE: client_credentials
   services:
   - tracker-service-registry
+  - tracker-sso
