--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -6,9 +6,11 @@ applications:
   routes:
   - route: timesheets-pal-gauri-naresh.cfapps.io
   path: Applications/TimesheetsServer/bin/Release/netcoreapp2.1/publish
-
+  env:
+    GRANT_TYPE: client_credentials
     
   services:
   - tracker-service-registry
-   - tracker-circuit-breaker-dashboard
+  - tracker-circuit-breaker-dashboard
   - tracker-amqp
+  - tracker-sso
